# PSE-HTTP-Server

./: CMakeLists.txt  Makefile  Plan.docx  README.md
Dokumentation/: annotated.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  http__error_8h.html  http__error_8h_source.html  http__file_i_o_8h.html  http__file_i_o_8h_source.html  http__parser_8h.html  http__parser_8h.js  http__parser_8h_source.html  http__server_8h_source.html  http__status_8h.html  http__status_8h.js  http__status_8h_source.html  http__string_8h.html  http__string_8h.js  http__string_8h_source.html  http__utils_8h.html  http__utils_8h_source.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structhttp__request-members.html  structhttp__request.html  structhttp__response-members.html  structhttp__response.html  structstring-members.html  structstring.html
HTML (Status page)/: 200.html  201.html  202.html  204.html  301.html  302.html  304.html  400.html  401.html  403.html  404.html  414.html  500.html  501.html  503.html  505.html
Präsentation/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions_vars.html  globals_func.html  globals_type.html  http__error_8h.html  http__file_i_o_8h.js  http__file_i_o_8h_source.html  http__server_8h.html  http__server_8h.js  http__server_8h_source.html  http__status_8h.html  http__status_8h_source.html  http__string_8h.html  http__utils_8h.html  (+5 more)
(+352 files in other folders)
